# CMakeProjectTemplate

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeProjectTemplateConfig.cmake  LICENSE  README.md  init_project.py  init_project.sh
cmake/configurations/: Configurations.cmake  Options.cmake
cmake/toolchains/: cmake_tool_chain_file_sample.cmake
cmake/toolchains/linux/: TC-aarch64-linux-gnu-gcc-g++.cmake  TC-x86_64-linux-gnu-gcc-g++.cmake
cmake/toolchains/linux/x86_64-linux-gnu-gcc/: TC-aarch64-x86_64-linux-gnu-gcc.cmake
cmake/toolchains/windows/llvm-mingw-msvcrt-x86-64/: TC-aarch64-w64-mingw32-gcc.cmake  TC-aarch64-w64-mingw32.cmake
cmake/utils/: CMakeUtils.cmake  InstallUtils.cmake  PrintUtils.cmake
include/cmake_project_template/: cmake_project_template_libsrc.h  lib_hello_world.h
scripts/: clang-format-helper.sh
src/: CMakeLists.txt  cmake_project_template_libsrc.cpp  cmake_project_template_main.cpp  executable_hello_world.cpp  lib_hello_world.cpp
